GWBasic/src/main/java/de/hft_stuttgart/cpl/GWBasic.java
/* GWBasic.java */
/* Generated By:JavaCC: Do not edit this line. GWBasic.java */
package de.hft_stuttgart.cpl;

import java.io.InputStream;
import java.io.IOException;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.File;
import java.io.PrintStream;
import java.io.ByteArrayOutputStream;
import java.nio.file.Files;
import java.nio.file.Path;
import java.util.Set;
import java.util.List;
import java.util.Map;
import java.util.Stack;
import java.util.HashSet;
import java.util.HashMap;
import java.util.ArrayList;

public class GWBasic implements GWBasicConstants {
    public record WhileItem(String id, String startLabel, String endLabel) {}
    public record ForItem(String id, String varName, String startLabel, String endLabel, String step) {}
    public record Goto(String fromLine, String targetLine, String kind) {}

    Set<String> valueSet = new HashSet<>();
    Stack<WhileItem> whileStack = new Stack<>();
    Stack<ForItem> forStack = new Stack<>();

    /* For the compile-time "jump target may not exist" check:
     * remember every line number we defined and every GOTO target,
     * then verify all targets exist once parsing is complete. */
    Set<String> definedLines = new HashSet<>();
    List<Goto> pendingGotos = new ArrayList<>();

    String currentLine;
    int forCounter = 0;   /* unique labels for nested/independent FOR loops */
    int gosubCounter = 0; /* unique return-site labels for GOSUB */

    public static void main(String [] args) throws FileNotFoundException {
        InputStream input = args.length==0 ? System.in : new FileInputStream(args[0]);

        /* Capture everything the parser emits into a buffer instead of
         * streaming it straight to stdout. On success we replay the buffer to
         * stdout unchanged. On a BASIC source error we instead leave the
         * (incomplete) C in the target directory under a NON-".c" extension, so
         * it is easy to recognise that this code was never compiled, and we
         * never feed a half-written file to the C compiler. */
        PrintStream realOut = System.out;
        ByteArrayOutputStream buffer = new ByteArrayOutputStream();
        System.setOut(new PrintStream(buffer, true));

        GWBasic parser = new GWBasic(input);
        try {
            parser.parse();
            /* Success: the produced C is complete -> emit it to stdout. */
            System.setOut(realOut);
            byte[] bytes = buffer.toByteArray();
            realOut.write(bytes, 0, bytes.length);
            realOut.flush();
        }
        catch (ParseException | TokenMgrError ex) {
            /* Error inside the BASIC source: emit a clear diagnostic, dump the
             * partial output under a non-".c" extension, and signal failure
             * with a non-zero exit code so the build pipeline does NOT invoke
             * the C compiler on incomplete output. */
            System.setOut(realOut);
            String failPath = writeFailedOutput(args, buffer.toByteArray());
            System.err.println("GWBasic compile error: " + ex.getMessage());
            if (failPath != null) {
                System.err.println("Incomplete C left (not compiled) at: " + failPath);
            }
            System.exit(1);
        }
    }

    /* Write the incomplete transpiler output into the target directory under a
     * ".cfail" extension. Returns the path written, or null if it could not be
     * written (in which case the compile error is still reported). */
    static String writeFailedOutput(String[] args, byte[] bytes) {
        String base;
        if (args.length == 0) {
            base = "output";
        } else {
            String name = new File(args[0]).getName();
            int dot = name.lastIndexOf('.');
            base = dot > 0 ? name.substring(0, dot) : name;
        }
        File targetDir = new File("target");
        File out = (targetDir.isDirectory() || targetDir.mkdirs())
                 ? new File(targetDir, base + ".cfail")
                 : new File(base + ".cfail");
        try {
            Files.write(out.toPath(), bytes);
            return out.getPath();
        } catch (IOException io) {
            return null;
        }
    }
    public void output(String format, Object... args) {
        System.out.printf("    ");
        System.out.printf(format, args);
        System.out.printf(";%n");
    }
    public void label(String format, Object... args) {
        System.out.printf("  ");
        System.out.printf(format, args);
        System.out.printf(":%n");
    }
    public void comment(String format, Object... args) {
        System.out.printf("    /* ");
        System.out.printf(format, args);
        System.out.printf(" */%n");
    }

    /* Compile-time check: every GOTO must target an existing line.
     * A bad goto in the emitted C would be a C-compiler error, which
     * the assignment forbids -- so we catch it here and emit a proper
     * compiler error instead. */
    void verifyGotoTargets() throws ParseException {
        for (Goto g : pendingGotos) {
            if (!definedLines.contains(g.targetLine())) {
                throw new ParseException(
                    "line " + g.fromLine() + ": " + g.kind() + " " + g.targetLine() +
                    " -- target line number does not exist");
            }
        }
    }

  final public void parse() throws ParseException {
    prolog();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DEC_NUMBER:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      line();
    }
    epilog();
    jj_consume_token(0);
{if ("" != null) return;}
}

  final public void prolog() throws ParseException {
try {
            InputStream prologInput = getClass().getResourceAsStream("/prolog.c");
            prologInput.transferTo(System.out);
            prologInput.close();
        } catch (IOException e) {
            {if (true) throw new ParseException("Error loading prolog.c");}
        }
}

  final public void epilog() throws ParseException {
if ( !whileStack.isEmpty() ) {
            {if (true) throw new ParseException("WHILE without WEND");}
        }
        if ( !forStack.isEmpty() ) {
            {if (true) throw new ParseException("FOR without NEXT");}
        }
        verifyGotoTargets();
        try {
            InputStream epilogInput = getClass().getResourceAsStream("/epilog.c");
            epilogInput.transferTo(System.out);
            epilogInput.close();
        } catch (IOException e) {
            {if (true) throw new ParseException("Error loading epilog.c");}
        }
}

  final public void line() throws ParseException {Token number;
    number = jj_consume_token(DEC_NUMBER);
currentLine = number.image;
        definedLines.add(number.image);
        label("label_%s_init", number.image);
    stmt();
label("label_%s_fini", number.image);
    jj_consume_token(EOL);
}

  final public void stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PRINT:{
      printStmt();
      break;
      }
    case DIM:{
      dimStmt();
      break;
      }
    case LET:{
      letStmt();
      break;
      }
    case WHILE:{
      whileStmt();
      break;
      }
    case WEND:{
      wendStmt();
      break;
      }
    case FOR:{
      forStmt();
      break;
      }
    case NEXT:{
      nextStmt();
      break;
      }
    case GOTO:{
      gotoStmt();
      break;
      }
    case GOSUB:{
      gosubStmt();
      break;
      }
    case RETURN:{
      returnStmt();
      break;
      }
    default:
      jj_la1[1] = jj_gen;

    }
}

  final public void printStmt() throws ParseException {
    jj_consume_token(PRINT);
    expr();
output("PRINT()");
}

  final public void letStmt() throws ParseException {Token id;
    jj_consume_token(LET);
    id = jj_consume_token(NAME);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OPAREN:{
      jj_consume_token(OPAREN);
      expr();
      jj_consume_token(CPAREN);
      jj_consume_token(EQUAL);
      expr();
/* stack now holds: index, value -> STORE_ARRAY pops value then index */
            output("STORE_ARRAY(\"%s\")", id.image);
      break;
      }
    case EQUAL:{
      jj_consume_token(EQUAL);
      expr();
output("STORE(\"%s\")", id.image);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void dimStmt() throws ParseException {Token id; Token n;
    jj_consume_token(DIM);
    id = jj_consume_token(NAME);
    jj_consume_token(OPAREN);
    n = jj_consume_token(DEC_NUMBER);
    jj_consume_token(CPAREN);
output("DIM(\"%s\", %s)", id.image, n.image);
}

  final public void whileStmt() throws ParseException {
    jj_consume_token(WHILE);
String labelStart = "while_%s_start".formatted(currentLine);
        String labelEnd = "while_%s_end".formatted(currentLine);
        whileStack.push(new WhileItem(currentLine, labelStart, labelEnd));
        label(labelStart);
    expr();
output("JUMP_IF_FALSE(%s)", labelEnd);
}

  final public void wendStmt() throws ParseException {
    jj_consume_token(WEND);
if ( whileStack.isEmpty() ) {
            {if (true) throw new ParseException("WEND without WHILE");}
        }
        WhileItem item = whileStack.pop();
        output("JUMP(%s)", item.startLabel());
        label(item.endLabel());
}

/* FOR v = <start> TO <limit> [STEP <step>]
 *   start value is stored into v immediately.
 *   The loop test (v <= limit, or v >= limit for negative step) is
 *   emitted at the top; NEXT increments v and jumps back. */
  final public void forStmt() throws ParseException {Token id;
    String step = "1";
    jj_consume_token(FOR);
    id = jj_consume_token(NAME);
    jj_consume_token(EQUAL);
String fid = "for_" + (forCounter++);
        String startLabel = fid + "_start";
        String endLabel   = fid + "_end";
        String var = id.image;
        String limitVar = var + "__limit";
    expr();
/* initialise loop variable with the start value */
        output("STORE(\"%s\")", var);
    jj_consume_token(TO);
    expr();
/* stash the limit in a hidden variable so it is evaluated once */
        output("STORE(\"%s\")", limitVar);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STEP:{
      jj_consume_token(STEP);
      step = signedNumber();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
forStack.push(new ForItem(currentLine, var, startLabel, endLabel, step));
        label(startLabel);
        /* loop test:  step>=0 ? var<=limit : var>=limit  */
        output("LOAD_VAR(\"%s\")", var);
        output("LOAD_VAR(\"%s\")", limitVar);
        if (step.startsWith("-")) {
            output("CMP_GE()");
        } else {
            output("CMP_LE()");
        }
        output("JUMP_IF_FALSE(%s)", endLabel);
}

  final public String signedNumber() throws ParseException {Token t; String sign = "";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MINUS:{
      jj_consume_token(MINUS);
sign = "-";
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DEC_NUMBER:{
      t = jj_consume_token(DEC_NUMBER);
      break;
      }
    case FLOAT_NUMBER:{
      t = jj_consume_token(FLOAT_NUMBER);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return sign + t.image;}
    throw new Error("Missing return statement in function");
}

  final public void nextStmt() throws ParseException {Token id;
    jj_consume_token(NEXT);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NAME:{
      id = jj_consume_token(NAME);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
if ( forStack.isEmpty() ) {
            {if (true) throw new ParseException("NEXT without FOR");}
        }
        ForItem item = forStack.pop();
        /* increment loop variable by step */
        output("LOAD_VAR(\"%s\")", item.varName());
        output("LOAD_NUM(%s)", item.step());
        output("ADD()");
        output("STORE(\"%s\")", item.varName());
        output("JUMP(%s)", item.startLabel());
        label(item.endLabel());
}

  final public void gotoStmt() throws ParseException {Token target;
    jj_consume_token(GOTO);
    target = jj_consume_token(DEC_NUMBER);
/* defer existence check until all lines are seen */
        pendingGotos.add(new Goto(currentLine, target.image, "GOTO"));
        output("JUMP(label_%s_init)", target.image);
}

  final public void gosubStmt() throws ParseException {Token target;
    jj_consume_token(GOSUB);
    target = jj_consume_token(DEC_NUMBER);
/* same existence check as GOTO */
        pendingGotos.add(new Goto(currentLine, target.image, "GOSUB"));
        String ret = "gosub_ret_" + (gosubCounter++);
        /* push the return address (label-as-value), jump to the subroutine,
         * and place the return label right after the call site */
        output("gosub_push(&&%s)", ret);
        output("JUMP(label_%s_init)", target.image);
        label(ret);
}

  final public void returnStmt() throws ParseException {
    jj_consume_token(RETURN);
/* pop the saved address and jump back via computed goto */
        output("goto *goback()");
}

  final public void expr() throws ParseException {Token op;
    arith();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NE:
    case LE:
    case GE:
    case LT:
    case GT:
    case EQUAL:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:{
        jj_consume_token(EQUAL);
        arith();
output("CMP_EQ()");
        break;
        }
      case NE:{
        jj_consume_token(NE);
        arith();
output("CMP_NE()");
        break;
        }
      case LE:{
        jj_consume_token(LE);
        arith();
output("CMP_LE()");
        break;
        }
      case GE:{
        jj_consume_token(GE);
        arith();
output("CMP_GE()");
        break;
        }
      case LT:{
        jj_consume_token(LT);
        arith();
output("CMP_LT()");
        break;
        }
      case GT:{
        jj_consume_token(GT);
        arith();
output("CMP_GT()");
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
}

  final public void arith() throws ParseException {Token op;
    term();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        term();
output("ADD()");
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        term();
output("SUB()");
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  final public void term() throws ParseException {Token op;
    fact();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:
      case DIVIDE:
      case MODULO:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:{
        op = jj_consume_token(TIMES);
        fact();
output("MUL()");
        break;
        }
      case DIVIDE:{
        op = jj_consume_token(DIVIDE);
        fact();
output("DIV()");
        break;
        }
      case MODULO:{
        op = jj_consume_token(MODULO);
        fact();
output("MOD()");
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  final public void fact() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OPAREN:{
      jj_consume_token(OPAREN);
      expr();
      jj_consume_token(CPAREN);
      break;
      }
    case FLOAT_NUMBER:{
      t = jj_consume_token(FLOAT_NUMBER);
output("LOAD_NUM(%s)", t.image);
      break;
      }
    case DEC_NUMBER:{
      t = jj_consume_token(DEC_NUMBER);
output("LOAD_CONST(%s)", t.image);
      break;
      }
    case OCT_NUMBER:{
      t = jj_consume_token(OCT_NUMBER);
output("LOAD_CONST(%s)", t.image);
      break;
      }
    case HEX_NUMBER:{
      t = jj_consume_token(HEX_NUMBER);
output("LOAD_CONST(%s)", t.image);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      if (jj_2_1(2)) {
        t = jj_consume_token(NAME);
        jj_consume_token(OPAREN);
        expr();
        jj_consume_token(CPAREN);
output("LOAD_ARRAY(\"%s\")", t.image);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NAME:{
          t = jj_consume_token(NAME);
output("LOAD_VAR(\"%s\")", t.image);
          break;
          }
        case STRING:{
          t = jj_consume_token(STRING);
output("LOAD_STR(%s)", t.image);
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_3_1()
 {
    if (jj_scan_token(NAME)) return true;
    if (jj_scan_token(OPAREN)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public GWBasicTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[15];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x8000,0x3e7c0000,0x2002,0x1000000,0x10,0xc000,0x80000000,0x3f00,0x3f00,0x18,0x18,0xe0,0xe0,0x3c002,0xc0000000,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
	}
  final private JJCalls[] jj_2_rtns = new JJCalls[1];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public GWBasic(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public GWBasic(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new GWBasicTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public GWBasic(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new GWBasicTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new GWBasicTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public GWBasic(GWBasicTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(GWBasicTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 15; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   if (++jj_gc > 100) {
		 jj_gc = 0;
		 for (int i = 0; i < jj_2_rtns.length; i++) {
		   JJCalls c = jj_2_rtns[i];
		   while (c != null) {
			 if (c.gen < jj_gen) c.first = null;
			 c = c.next;
		   }
		 }
	   }
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }
